# afritokeni

./: .env.example  .gitignore  ADMIN_DATA_INTEGRATION_PLAN.md  AGENT_SERVICE_MIGRATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_PLAN.md  AUDIT_REPORT.md  BUGS_FOUND_BY_TESTS.md  BUSINESS_LOGIC_ANALYSIS.md  BUSINESS_LOGIC_REFACTORING_PLAN.md  CANISTER_MIGRATION_PLAN.md  CANISTER_SPLIT_PLAN.md  CI_INTEGRATION_TESTS_SETUP.md  CLAUDE.md  CODING_STANDARDS.md  COMMISSION_INTEGRATION_IMPLEMENTATION.md  COMMISSION_TESTS_SUMMARY.md  CRITICAL_BUG_FIXED.md  Cargo.toml  DEPLOYMENT.md  E2E_TESTING.md  INTEGRATION_TEST_COVERAGE_CHECKLIST.md  INTEGRATION_TEST_PLAN.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_ROADMAP.md  INTEGRATION_TEST_SUMMARY.md  JUNO_MIGRATION_AUDIT.md  MIGRATION_COMPLETE.md  MOCK_LEDGER_FIX.md  NEXT_SESSION_DETAILED_PROMPT.md  NEXT_SESSION_PROMPT.md  PARALLEL_WORK_STRATEGY.md  PHASE_1_COMPLETE.md  PLAYGROUND_MODE_SECURITY_ANALYSIS.md  README.md  REVISED_ARCHITECTURE.md  ROUTING_SECURITY_ANALYSIS.md  RUST_MIGRATION_STATUS.md  SECURITY_AUDIT.md  SECURITY_AUDIT_SUMMARY.md  (+29 more)
canisters/agent_canister/: COVERAGE_REPORT.md  Cargo.toml  README.md  SECURITY_AUDIT.md  TEST_COVERAGE.md  agent_config.toml
canisters/agent_canister/src/: config.rs  lib.rs
canisters/agent_canister/src/endpoints/: agent_endpoints.rs  deposit_endpoints.rs  mod.rs  withdrawal_endpoints.rs
canisters/agent_canister/src/logic/: deposit_logic.rs  fraud_detection.rs  mod.rs  withdrawal_logic.rs
canisters/agent_canister/src/services/: data_client.rs  mod.rs  user_client.rs  wallet_client.rs
canisters/agent_canister/tests/: lib.rs
canisters/agent_canister/tests/integration/: agent_balance_tests.rs  code_expiration_tests.rs  concurrent_operations_tests.rs  deposit_tests.rs  edge_case_tests.rs  enhanced_fraud_detection_tests.rs  mod.rs  (+6 more)
canisters/business_logic_canister/: Cargo.toml
canisters/business_logic_canister/.cargo/: config.toml
canisters/business_logic_canister/src/: lib.rs  logic.rs  models.rs
canisters/business_logic_canister/tests/: lib.rs
canisters/data_canister/: AUDIT_SUMMARY.md  COVERAGE_REPORT.md  Cargo.toml  ICP_BEST_PRACTICES_REVIEW.md  PIN_MIGRATION_GUIDE.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION_REPORT.md  TEST_COVERAGE.md
canisters/data_canister/src/: lib.rs  models.rs
canisters/data_canister/tests/: TEST_SUMMARY.md  common.rs  integration.rs  lib.rs  simple_test.rs
canisters/deposit_canister/: Cargo.toml  README.md  deposit_config.toml
canisters/deposit_canister/src/: lib.rs  logic.rs  tests.rs
canisters/deposit_canister/tests/: lib.rs
canisters/ussd_canister/: COMPREHENSIVE_FINAL_REPORT.md  Cargo.toml  FINAL_STATUS_REPORT.md  FINAL_TEST_REPORT.md  FINAL_TEST_STATUS.md  INTEGRATION_TEST_STATUS.md  MIGRATION_COMPLETE.md  NEXT_SESSION_PROMPT.md  PLAYGROUND_STATUS.md  README.md  SECURITY_AUDIT.md  SESSION_2_FIXES.md  SESSION_SUMMARY.md  TESTING_STRATEGY.md  TEST_COMPLETION_REPORT.md  TEST_COVERAGE.md  TEST_FAILURE_ANALYSIS.md  TEST_FIXES_ROADMAP.md  TEST_FIX_GUIDE.md  TEST_FIX_PROGRESS.md  TEST_FIX_SUMMARY.md  TEST_REPORT.md  TEST_STATUS_FINAL.md  USSD_TEST_FIXES_COMPLETE.md  USSD_TEST_FIX_PLAN.md  USSD_TEST_PLAN.md  config.toml  ussd_canister.did
canisters/ussd_canister/src/: config_loader.rs  config_loader.rs.bak  lib.rs
canisters/ussd_canister/tests/: QUICK_REFERENCE.md  README.md  USSD_MENU_PATHS.md  lib.rs  pin_tests.rs  update_tests.sh  ussd_bitcoin_tests.rs  ussd_dao_tests.rs  ussd_language_tests.rs  ussd_local_currency_tests.rs  ussd_usdc_tests.rs
canisters/wallet_canister/: CODE_REVIEW_SUMMARY.md  COVERAGE_REPORT.md  Cargo.toml  README.md  SECURITY_AUDIT.md  TEST_COVERAGE.md  coverage.lcov  wallet_config.toml
canisters/wallet_canister/src/: config.rs  lib.rs
src/satellite/: Cargo.toml
src/satellite/src/: config.rs  http_handlers.rs  juno_store.rs  lib.rs  pin.rs  pin_test.rs  session.rs  sms.rs  translations.rs  translations_generated.txt  ussd.rs  verification.rs
src/satellite/tests/: ussd_e2e.rs
tests/: Cargo.toml  README.md  TODO.md  e2e_tests.rs  lib.rs  setup.ts  unit_tests.rs
tests/e2e/: README.md  e2e-api-routes.feature  e2e-exchange-flow.feature  e2e-revenue-tracking.feature  e2e-withdrawal-flow.feature  mod.rs  setup.ts
tests/e2e/features/: ussd-cancel-all-flows.feature  ussd-integration.feature
tests/e2e/step-definitions/: e2e-steps.ts
tests/e2e/steps/: given.ts  given_steps.rs  mod.rs  then.ts  when.ts  when_steps.rs  world.ts
tests/features/: e2e-deposit-flow.feature  e2e-exchange-flow.feature  e2e-withdrawal-flow.feature
tests/features/step-definitions/: agent-steps.ts  error-handling-steps.ts  icp-integration-steps.ts  integration-ckbtc-ckusdc-steps.ts  multi-currency-steps.ts  ussd-cancel-steps.ts  ussd-dao-steps.ts  ussd-error-steps.ts  ussd-handler-steps.ts  ussd-integration-steps.ts  ussd-language-steps.ts  ussd-menu-navigation-steps.ts  ussd-service-steps.ts  ussd-state-steps.ts  ussd-steps.ts
tests/helpers/: ussdTestHelpers.ts
tests/integration/: integration-ckbtc-ckusdc-steps.ts  setup.ts
tests/integration/features/: ckbtc.feature  ckusdc.feature  ussd-bitcoin.feature  ussd-language.feature  ussd-local-currency.feature  ussd-usdc.feature
tests/integration/steps/: ckbtc-ckusdc-steps.ts  setup-steps.ts  ussd-steps.ts
tests/mocks/: canister_mock.rs  dataServiceMock.ts  juno_mock.rs  mod.rs
tests/steps/: then_steps.rs  world.rs
tests/steps/handlers/: flows.rs  mod.rs
tests/unit/: mod.rs  setup.ts  ussd-cancel-steps.ts  ussd-cancel.feature  ussd-dao-steps.ts  ussd-error-steps.ts  ussd-errors.feature  ussd-find-agent-steps.ts  ussd-handler-steps.ts  ussd-handlers.feature  ussd-integration-steps.ts  ussd-language-steps.ts  ussd-language.feature  ussd-menu-navigation-steps.ts  ussd-service-steps.ts  ussd-service.feature  ussd-session-reset.feature  ussd-state-steps.ts  ussd-steps.ts  ussd-transactions-steps.ts
tests/unit/features/: pin-security.feature  session-management.feature  translations.feature
tests/unit/steps/: mod.rs  pin_steps.rs
(+745 files in other folders)
