[workspace]
members = [
    "src/satellite",
    "canisters/shared_types",
    "canisters/business_logic_canister",
    "canisters/data_canister",
    "canisters/deposit_canister",
    "canisters/exchange_canister",
    "canisters/ussd_canister",
    "canisters/withdrawal_canister",
]
exclude = ["tests", "src/satellite"]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }