[workspace]
members = [
    "canisters/shared_types",
    "canisters/data_canister",
    "canisters/user_canister",
    "canisters/wallet_canister",
    "canisters/crypto_canister",
    "canisters/agent_canister",
    "canisters/ussd_canister",
]
exclude = ["tests", "src/satellite"]
resolver = "2"

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false }
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }