[package]
name = "agent_canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
shared_types = { path = "../shared_types" }

[dev-dependencies]
pocket-ic = "10.0.0"

[[test]]
name = "lib"
path = "tests/lib.rs"
