[package]
name = "business_logic_canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
shared_types = { path = "../shared_types" }
