[package]
name = "business_logic_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
toml = "0.8"
shared_types = { path = "../shared_types" }

[dev-dependencies]
pocket-ic = "10.0"
