[package]
name = "data_canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
shared_types = { path = "../shared_types" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pocket-ic = "10.0.0"
