[package]
name = "deposit_canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
toml = "0.8"

[dev-dependencies]
pocket-ic = "10.0"
