[package]
name = "ussd_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "2.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
argon2 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
