[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
test-utils = []

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0.225", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
junobuild-satellite = "0.2.6"
junobuild-macros = "0.1.1"
junobuild-utils = "0.1.3"
urlencoding = "2.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
argon2 = "0.5"

[dev-dependencies]
cucumber = "0.21"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
